--- a/elasticsearch-7.X/panos-sanidad-config.json
+++ b/elasticsearch-7.X/panos-sanidad-config.json
@@ -8,8 +8,5 @@ PUT /_template/panos-sanidad-config
         "refresh_interval" : "10s"
       }
     },
-    "mappings" : { },
-    "aliases" : {
-      "panos-sanidad-config" : { }
-    }
+    "mappings" : { }
  }
